--- a/TestAPI/package.json
+++ b/TestAPI/package.json
@@ -4,6 +4,7 @@
   "description": "Awesome project developed with TypeORM.",
   "type": "commonjs",
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/node": "^16.11.10",
     "nodemon": "^2.0.20",
     "ts-node": "10.7.0",
