--- a/TsApi/package.json
+++ b/TsApi/package.json
@@ -10,9 +10,16 @@
     "typescript": "4.5.2"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
+    "class-validator": "^0.14.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.17.2",
+    "express-validator": "^6.15.0",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.4.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "0.3.12"
@@ -20,6 +27,7 @@
   "scripts": {
     "start": "ts-node src/index.ts",
     "dev": "nodemon -w *.ts -w .env src/index.ts",
+    "verify": "nodemon -w *.ts -w .env src/verify.ts",
     "typeorm": "typeorm-ts-node-commonjs"
   }
 }
